Scheduler per interpreter and naive workstealing
Added naive workstealing for the scheduler per interpreter strategy, which just queries a random scheduler and asks for work. Also fixed the Makefile and I guess I missed some changes in the last patch too.

Signed-off-by: Reinout Stevens <resteven@vub.ac.be>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -261,6 +261,7 @@ RVM_HEADERS = \
   debug_helper.h \
   tracked_ptr.h \
   tracked_ptr_registry.h \
+  scheduler.h \
   
 
 ifeq "$(PLATFORM)" "Intel"
@@ -508,6 +509,7 @@ OBJS = \
   abstract_os_interface.opt \
   logical_core.opt \
   debug_helper.opt \
+  scheduler.opt \
 
 
 ifeq "$(PLATFORM)" "Intel"
