--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -7,6 +7,11 @@ SRC_DIR ?= $(shell pwd)/../src
 OS      ?= $(shell uname)
 GTEST   ?= $(SRC_DIR)/../googletest
 
+ifeq "$(OS)" "MACOS"
+  # OS is set by Xcode to MACOS, but we rely on it being Darwin
+  OS = Darwin
+endif
+
 LOW_OPTIMIZE_LEVEL  ?= -O3
 HIGH_OPTIMIZE_LEVEL ?= -O3
 
