Added support to experiment with the preheader
- now the GC and object table can be disabled, but the backpointer-field can be left in
- the Extra_Preheader_word_experiment can be disabled (but it is needed for Sly)
- the whole preheader can be removed

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -24,6 +24,11 @@ ifndef PLATFORM
   PLATFORM = Tilera
 endif
 
+ifndef PREHEADER
+  # fall back in case it has not been defined previously
+  PREHEADER=1
+endif
+
 ifeq "$(SUPPRESS_CMD_OUTPUT)" "1"
   AT = @
 else
@@ -85,7 +90,7 @@ INCLUDES += \
 endif
 
 
-CONFIG_FLAGS += -DExtra_Preheader_Word_Experiment=1 -DLSB_FIRST=1 -DROAR_VM
+CONFIG_FLAGS += -DExtra_Preheader_Word_Experiment=$(PREHEADER) -DLSB_FIRST=1 -DROAR_VM
 
 # removed -Winline warning for now, was not useful so far
 # CONFIG_FLAGS += -Winline 
