Missing branding changes: target name, project name, app icon
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/from_squeak/iOS/vm/Info-iPhone.plist
+++ b/vm/src/from_squeak/iOS/vm/Info-iPhone.plist
@@ -10,6 +10,11 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>Squeak72x72.png</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Squeak72x72.png</string>
+		<string>Squeak72x72.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>soft.roarvm.poc</string>
 	<key>CFBundleInfoDictionaryVersion</key>
