Use memory_semantics interface for allocation in buffered_channel_debug
- needed to move out the implementation into cpp file to avoid circular dependencies

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -517,6 +517,7 @@ ifeq "$(PLATFORM)" "Intel"
 OBJS += \
   synced_queue.opt \
   buffered_channel.opt \
+  buffered_channel_debug.opt \
   posix_os_interface.opt \
   posix_processes.opt \
   shared_memory_message_queue.opt \
