--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -592,8 +592,27 @@ rvm-test: libgtest.a $(TEST_OBJS) $(TEST_H)
 test: rvm-test
 	$(AT)./rvm-test
 
+test-cov : LDFLAGS+=-lgcov -coverage
+test-cov : CONFIG_FLAGS+=-fprofile-arcs -ftest-coverage 
+test-cov: test
+	gcov $(TEST_SRC) $(RVM_HEADERS) $(OBJS:.opt=.cpp)
+	lcov --directory . --capture --output-file rvm-gcov.info
+	genhtml --output-directory rvm-cov rvm-gcov.info
+
+partial-cov : LDFLAGS+=-lgcov -coverage
+partial-cov : CONFIG_FLAGS+=-fprofile-arcs -ftest-coverage 
+partial-cov : CXXFLAGS:=$(CXX_CONFIG_FLAGS)
+partial-cov : INCLUDES+=$(GTEST_INCLUDES)
+partial-cov: $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main.o libgtest.a
+	$(CXX) $(LDFLAGS) $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main.o gtest-all.o -lm -lpthread  $(TILERA_LIBS) -L. $(LIBS_LINKING) -o ./$@
+	$(AT)./$@
+	gcov -o $(SRC_DIR)/tests/ interprocess_allocator.cpp interprocess_allocator.h
+	lcov --directory $(SRC_DIR)/tests/ --capture --output-file rvm-gcov.info
+	genhtml --output-directory rvm-cov rvm-gcov.info
+
 clean:
 	rm -f *.o *.opt $(EXECUTABLE) rvm-test libgtest.a $(TEST_OBJS)
+	rm *.gcno *.gcda *.gcov rvm-gcov.info $(SRC_DIR)/tests/*.gcno $(SRC_DIR)/tests/*.gcda $(SRC_DIR)/tests/*.gcov
 
 install: $(EXECUTABLE)
 	install $(EXECUTABLE) /usr/local/bin
