Added new main_without_roarvm.cpp for tests
- it is used for partial testing when the whole RoarVM infrastructure is not required

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -603,8 +603,8 @@ partial-cov : LDFLAGS+=-lgcov -coverage
 partial-cov : CONFIG_FLAGS+=-fprofile-arcs -ftest-coverage 
 partial-cov : CXXFLAGS:=$(CXX_CONFIG_FLAGS)
 partial-cov : INCLUDES+=$(GTEST_INCLUDES)
-partial-cov: $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main.o libgtest.a
-	$(CXX) $(LDFLAGS) $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main.o gtest-all.o -lm -lpthread  $(TILERA_LIBS) -L. $(LIBS_LINKING) -o ./$@
+partial-cov: $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main_without_roarvm.o libgtest.a
+	$(CXX) $(LDFLAGS) $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main_without_roarvm.o gtest-all.o -lm -lpthread  $(TILERA_LIBS) -L. $(LIBS_LINKING) -o ./$@
 	$(AT)./$@
 	gcov -o $(SRC_DIR)/tests/ interprocess_allocator.cpp interprocess_allocator.h
 	lcov --directory $(SRC_DIR)/tests/ --capture --output-file rvm-gcov.info
