The use of .o should not be necessary anymore
- think, I fixed all the compiler optimization problems

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -443,11 +443,11 @@ OBJS = \
   FilePlugin.opt \
   FloatArrayPlugin.opt \
   interpreter_bytecodes.opt \
-  interpreter_primitives.o \
+  interpreter_primitives.opt \
   LargeIntegers.opt \
   Matrix2x3Plugin.opt \
   measurements.opt \
-  memory_system.o \
+  memory_system.opt \
   method_cache.opt \
   MiscPrimitivePlugin.opt \
   multicore_object_heap.opt \
