Fixed compilation problem with initialize_main
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -449,6 +449,7 @@ OBJS = \
   Matrix2x3Plugin.opt \
   measurements.opt \
   memory_system.o \
+  read_mostly_memory_system.opt \
   method_cache.opt \
   MiscPrimitivePlugin.opt \
   multicore_object_heap.opt \
