--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -203,7 +203,7 @@ RVM_HEADERS = \
   RVMPlugin.h \
   multicore_object_heap.h \
   multicore_object_table.h \
-  memory_system.h \
+  basic_memory_system.h \
   core_tracer.h \
   abstract_tracer.h \
   oop_tracer.h \
@@ -448,7 +448,7 @@ OBJS = \
   LargeIntegers.opt \
   Matrix2x3Plugin.opt \
   measurements.opt \
-  memory_system.o \
+  basic_memory_system.opt \
   read_mostly_memory_system.opt \
   method_cache.opt \
   MiscPrimitivePlugin.opt \
