Major refactoring to avoid problems with binding of functions to the wrong concrete Memory_System class
- the first attempt had high code reuse but does not work with our way of compile-time polymorphism since the functions in the baseclass bind to the baseclass and not to the refined version in the subclass
- the new implementation uses an abstract class at the top, and then two concrete classes, and at the bottom, another concrete one for shared code (looks like a diamond)
- the typedef is not changing the parent of Memory_System instead of changing Memory_System directly

- this patch also includes a couple of refactorings, moving OS related stuff into the OS_Interface classes

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -449,6 +449,8 @@ OBJS = \
   LargeIntegers.opt \
   Matrix2x3Plugin.opt \
   measurements.opt \
+  memory_system.opt \
+  abstract_memory_system.opt \
   basic_memory_system.opt \
   read_mostly_memory_system.opt \
   method_cache.opt \
