Implement simple circular buffer
- works on preallocated memory
- is not threadsafe on its own
- added it to the make target partial-cov

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -609,11 +609,11 @@ partial-cov : LDFLAGS+=-lgcov -coverage
 partial-cov : CONFIG_FLAGS+=-fprofile-arcs -ftest-coverage 
 partial-cov : CXXFLAGS:=$(CXX_CONFIG_FLAGS)
 partial-cov : INCLUDES+=$(GTEST_INCLUDES)
-partial-cov: $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main_without_roarvm.o libgtest.a
+partial-cov: $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/circular_buffer.o $(SRC_DIR)/tests/main_without_roarvm.o libgtest.a
 	$(AT)echo Coverage generation is currently only supported by GNU GCC not LLVM GCC
-	$(CXX) $(LDFLAGS) $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/main_without_roarvm.o gtest-all.o -lm -lpthread  $(TILERA_LIBS) -L. $(LIBS_LINKING) -o ./$@
+	$(CXX) $(LDFLAGS) $(SRC_DIR)/tests/interprocess_allocator.o $(SRC_DIR)/tests/circular_buffer.o $(SRC_DIR)/tests/main_without_roarvm.o gtest-all.o -lm -lpthread  $(TILERA_LIBS) -L. $(LIBS_LINKING) -o ./$@
 	$(AT)./$@
-	gcov -o $(SRC_DIR)/tests/ interprocess_allocator.cpp interprocess_allocator.h
+	gcov -o $(SRC_DIR)/tests/ interprocess_allocator.cpp interprocess_allocator.h circular_buffer.cpp circular_buffer.h
 	lcov --directory $(SRC_DIR)/tests/ --capture --output-file rvm-gcov.info
 	genhtml --output-directory rvm-cov rvm-gcov.info
 
