--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -556,6 +556,14 @@ endif
 
 $(EXECUTABLE): $(OBJS) main.opt
 	$(CXX) $(LDFLAGS) $(OBJS) main.opt -lm $(TILERA_LIBS) $(LIBS_LINKING) -o $@
+ifeq "$(OS)" "Linux"
+ifneq "$(PLATFORM)" "Tilera"
+	mv $@ $@.bin
+	echo "#!/bin/sh" > $@
+	echo "setarch i686 -R `pwd`/$@.bin \"\$$@\"" >> $@
+	chmod +x $@
+endif
+endif
 
 # Test Related targets, we use the googletest framework for unit tests
 
