Renamed ilib-intel to message_buffers
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -79,7 +79,7 @@ INCLUDES = \
 	
 ifeq "$(PLATFORM)" "Intel"
 INCLUDES += \
-	-I$(SRC_DIR)/ilib-intel \
+	-I$(SRC_DIR)/message_buffers \
 	-I$(SRC_DIR)/ibm
 endif
 
@@ -403,11 +403,9 @@ vpath %.h $(SRC_DIR)/messages
 vpath %.h $(SRC_DIR)/multichip
 
 ifeq "$(PLATFORM)" "Intel"
-vpath %.cpp $(SRC_DIR)/ilib-intel
-vpath %.cpp $(SRC_DIR)/ibm
+vpath %.cpp $(SRC_DIR)/message_buffers
 
-vpath %.h $(SRC_DIR)/ilib-intel
-vpath %.h $(SRC_DIR)/ibm
+vpath %.h $(SRC_DIR)/message_buffers
 endif
 
 #        UnixOSProcessPlugin.o 
