Updated FilePlugin to have the std file handles available for the Pharo image and cmd output
- the next commit will fix a bug in the RoarVM that is required to be able to use the updated file plugin

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -335,6 +335,7 @@ vpath %.c $(SRC_DIR)/from_squeak/intplugins/SoundPlugin
 vpath %.c $(SRC_DIR)/from_squeak/intplugins/UnixOSProcessPlugin
 vpath %.c $(SRC_DIR)/from_squeak/intplugins/SocketPlugin
 vpath %.c $(SRC_DIR)/from_squeak/unix
+vpath %.c $(SRC_DIR)/from_squeak/unix/plugins/FilePlugin
 vpath %.c $(SRC_DIR)/from_squeak/unix/plugins/SocketPlugin
 vpath %.c $(SRC_DIR)/from_squeak/unix/plugins/SoundPlugin
 vpath %.c $(SRC_DIR)/from_squeak/unix/vm
